--- a/1_style_header_image_text/begin/index.html
+++ b/1_style_header_image_text/begin/index.html
@@ -9,6 +9,8 @@
 <body>
 
 	<header>
+		<div class="row">
+		<div class="col">
 		<img class="style-logo" src="images/logo.png" alt="Prism Logo">
 		<nav class="style-nav">
 			<ul>
@@ -18,11 +20,53 @@
 				<li><a href="#">Food</a></li>
 			</ul>
 		</nav>
+		</div>
+		</div>
 	</header>
 	
-	<main></main>
+	<main>
+		<div class="row">
+			<div class="col">
+				<div class="hero">
+					<h3>Editor's Choice</h3>
+					<h4>Sebastian Weiss</h4>
+					<h1>Urban Strokes</h1>
+					<a href="" class="button">Read More</a>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<div class="info-box-tan">
+					<h2>Inspiring reads</h2>
+					<p>The future is in lightening our footprints and brightening our lives.</p>
+					<a href="" class="button">Read More</a>
+				</div>
+			</div>	
+			<div class="col">
+				<div class="info-box-dark">
+					<h2>Reflections</h2>
+					<p>Stylish ways to bounce the heat off a roof and the planet.</p>
+					<a href="" class="button">Read More</a>
+				</div>
+			</div>	
+		</div>
+		<div class="row">
+			<div class="col"><img src="../../completed/images/gallery-1.jpg" alt=""></div>
+			<div class="col"><img src="../../completed/images/gallery-2.jpg" alt=""></div>
+			<div class="col"><img src="../../completed/images/gallery-3.jpg" alt=""></div>
+			<div class="col"><img src="../../completed/images/gallery-4.jpg" alt=""></div>
+		</div>
+	</main>
 	
-	<footer></footer>
+	<footer>
+		<div class="row">
+			<div class="col">
+				<p class="footer-text">©2015 Adobe Systems Incorporated. All rights reserved.</p>
+				<p class="footer-text">Any reference to Prism or any associated logos is for demonstration purposes only and is not intended to refer to any actual organization or event.</p>
+			</div>
+		</div>
+	</footer>
 
 </body>
 </html>
